Kubernet/frontend-ingress-unused.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    networking.gke.io/managed-certificates: "frontend-cert"
    kubernetes.io/ingress.global-static-ip-name: "frontend-ip"
spec:
  ingressClassName: gce
  rules:
    - host: answerflow-ai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
    - host: www.answerflow-ai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
