Kubernet/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - answerflow-ai.com
        - www.answerflow-ai.com
      secretName: frontend-tls-cert
  rules:
    - host: answerflow-ai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
    - host: www.answerflow-ai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
