Kubernet/cert-manager-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  name: cert-manager-webhook
  namespace: cert-manager
spec:
  ports:
  - port: 443
    targetPort: 6443
    protocol: TCP
  selector:
    app: cert-manager-webhook
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cert-manager-webhook
  namespace: cert-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cert-manager-webhook
  template:
    metadata:
      labels:
        app: cert-manager-webhook
    spec:
      serviceAccountName: cert-manager-webhook
      containers:
      - name: cert-manager-webhook
        image: quay.io/jetstack/cert-manager-webhook:v1.14.6
        args:
        - --secure-port=6443
        - --dynamic-serving-ca-secret-namespace=cert-manager
        - --dynamic-serving-ca-secret-name=cert-manager-webhook-ca
        - --dynamic-serving-dns-names=cert-manager-webhook,cert-manager-webhook.cert-manager,cert-manager-webhook.cert-manager.svc
        resources:
          requests:
            cpu: 20m
            memory: 64Mi
          limits:
            cpu: 100m
            memory: 256Mi
        ports:
        - name: webhook
          containerPort: 6443
        livenessProbe:
          httpGet:
            scheme: HTTPS
            path: /healthz
            port: 6443
          initialDelaySeconds: 10
          periodSeconds: 10
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: cert-manager-webhook
webhooks:
- name: webhook.cert-manager.io
  admissionReviewVersions: ["v1"]
  clientConfig:
    service:
      name: cert-manager-webhook
      namespace: cert-manager
      path: /validate
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN1RENDQWFNQ0NRQzhQTklSamM5eFN0REFOQmdrcWhraUc5dzBCQVFzRkFEQW5NUXN3Q1FZRFZRUUdFd0pWVXpFVwpNQkFHQTFVRUF3d0xSMjl2WjJ4bElGSmxiR0YwTUI0WERUSXhNVEE1TVM4eE5qRTBNRGs1Vm9ZRFRReU1URXcKT1RFdk1UWXhOREE1T1ZvdwpNSUlCRVRBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVEwQWdnRUJBQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQgpjcWgJCkg4cThFNEpqc2hXWGFXWWFpMy85N1hPV0pNTGFIM0ZPN2xnbTdxK2RhRUJObk5ycjA5aFJvWGZTZWEKVjYyekdlTkN3X3ZybEVXZjBLQk9QM0txL1daeTN2YkU5WkJQNlNCT3Nfb3JCV09MbWhDQUtKREhTRE [...]
  rules:
  - operations: ["CREATE", "UPDATE"]
    apiGroups: ["cert-manager.io"]
    apiVersions: ["v1"]
    resources: ["certificates"]
  failurePolicy: Fail
  sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: cert-manager-webhook
webhooks:
- name: webhook.cert-manager.io
  admissionReviewVersions: ["v1"]
  clientConfig:
    service:
      name: cert-manager-webhook
      namespace: cert-manager
      path: /mutate
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN1RENDQWFNQ0NRQzhQTklSamM5eFN0REFOQmdrcWhraUc5dzBCQVFzRkFEQW5NUXN3Q1FZRFZRUUdFd0pWVXpFVwpNQkFHQTFVRUF3d0xSMjl2WjJ4bElGSmxiR0YwTUI0WERUSXhNVEE1TVM4eE5qRTBNRGs1Vm9ZRFRReU1URXcKT1RFdk1UWXhOREE1T1ZvdwpNSUlCRVRBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVEwQWdnRUJBQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQgpjcWgJCkg4cThFNEpqc2hXWGFXWWFpMy85N1hPV0pNTGFIM0ZPN2xnbTdxK2RhRUJObk5ycjA5aFJvWGZTZWEKVjYyekdlTkN3X3ZybEVXZjBLQk9QM0txL1daeTN2YkU5WkJQNlNCT3Nfb3JCV09MbWhDQUtKREhTRE [...]
  rules:
  - operations: ["CREATE"]
    apiGroups: ["cert-manager.io"]
    apiVersions: ["v1"]
    resources: ["certificates"]
  failurePolicy: Fail
  sideEffects: None
